# CryptoCalculator

./: .gitignore  CMakeLists.txt  README.md
src/: CurrencyConverter.cpp  DataProvider.cpp  Ui.cpp  main.cpp
